backend/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
      - name: echo-server
        image: katsew/kodama:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "10m"
        command: ["kodama", "http", "server"]
        ports:
          - containerPort: 9090
